objects/USA_Presentation__c.object
<CustomObject>
    <description>Used in new item workflow.  Created for each presentation</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Presentations</relationshipLabel>
        <relationshipName>Presentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjacency__c</fullName>
        <label>Adjacency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A) Correct Adjacency</fullName>
                </value>
                <value>
                    <fullName>B) Not in Correct Adjacency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Value__c</fullName>
        <label>Display Value</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <label>Display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drink_Feature__c</fullName>
        <label>Drink Feature</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A) Programmed Drink Feature</fullName>
                </value>
                <value>
                    <fullName>B) Other Drink Feature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facings_After__c</fullName>
        <label>Facings After</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facings_Before__c</fullName>
        <label>Facings Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <formula>Account__r.USA_Latitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <formula>Account__r.gvp__Longitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Menu_Position__c</fullName>
        <label>Menu Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_enough__c</fullName>
        <label>Not enough space available</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not a factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_the_right_consumer__c</fullName>
        <label>Not the right Consumer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not a factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                    <color>#009900</color>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                    <color>#FFCC33</color>
                    <label>Undecided</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                    <color>#CC0000</color>
                    <label>Declined</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POS__c</fullName>
        <label>POS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Input Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not a factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sampling_Date__c</fullName>
        <label>Sampling Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sampling__c</fullName>
        <label>Sampling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shelf_Location__c</fullName>
        <label>Shelf Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A) Best Location</fullName>
                </value>
                <value>
                    <fullName>B) Not in Best Location</fullName>
                </value>
                <value>
                    <fullName>C) Cold Box</fullName>
                </value>
                <value>
                    <fullName>D) Lock Box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_Training_Date__c</fullName>
        <label>Staff Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Staff_Training__c</fullName>
        <label>Staff Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taste_Flavor__c</fullName>
        <label>Taste/Flavor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not a factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tasting_Event_Date__c</fullName>
        <label>Tasting/Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tasting_Event__c</fullName>
        <label>Tasting/Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Item - On Premise</fullName>
                </value>
                <value>
                    <fullName>New Item - Off Premise</fullName>
                </value>
                <value>
                    <fullName>Marketing Program - On Premise</fullName>
                </value>
                <value>
                    <fullName>Marketing Program - Off Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Menu__c</fullName>
        <label>Type of Menu</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A) Cocktail</fullName>
                </value>
                <value>
                    <fullName>B) Table Tent</fullName>
                </value>
                <value>
                    <fullName>C) After Dinner</fullName>
                </value>
                <value>
                    <fullName>D) Bottle Service</fullName>
                </value>
                <value>
                    <fullName>E) Menu Board</fullName>
                </value>
                <value>
                    <fullName>F) Other</fullName>
                </value>
                <value>
                    <fullName>G) No Menu available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Workflow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Workflow Record</description>
        <label>USA_Workflow</label>
        <referenceTo>USA_Workflow__c</referenceTo>
        <relationshipLabel>Presentations</relationshipLabel>
        <relationshipName>Presentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Window_Display_Signage__c</fullName>
        <label>Window Display/Signage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not a factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wines_Presentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wines Presentation</label>
        <type>Checkbox</type>
    </fields>
    <label>Presentation</label>
    <nameField>
        <label>Presentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Presentations</pluralLabel>
    <recordTypes>
        <fullName>USA_Spirits_Presentation</fullName>
        <active>true</active>
        <description>Presentation for Spirits workflows</description>
        <label>USA Spirits Presentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>USA_Wines_Presentation</fullName>
        <active>true</active>
        <description>Presentation for Wines workflows</description>
        <label>USA Wines Presentation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>